--- a/Web Page Code/PizzaMenu.html
+++ b/Web Page Code/PizzaMenu.html
@@ -35,7 +35,7 @@
 <p class="CPd"> A classic blend of melted Asiago, Mozzarella, and Cheddar cheeses, baked to golden perfection on our handmade crust with our signature red sauce. Simple, satisfying, and utterly delicious.
 </p>
 
-<p class="CPp">$9.99</p>
+<p class="CPp">$8.99</p>
 
 <button class="CPb">Customize!</button> 
 
@@ -49,14 +49,104 @@
 <p class="T1d">Our handmade crust, topped with our signature red sauce and a generous layer of our three-cheese blend. Choose your favorite topping to create your perfect pizza!
 </p>
 
-<p class="T1p">$10.99</p>
+<p class="T1p">$9.99</p>
 
 <button class="T1b">Customize!</button>
 
 
+<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 580">
+
+<h3 class="T2t">2-Topping Pizza</h3>
+
+<p class="T2d"> Customize your culinary experience with our two-topping pizza. Starting with our handmade crust, signature red sauce, and a blend of Asiago, Mozzarella, and Cheddar cheeses, add your favorite duo of toppings.
+</p>
+
+<p class="T2p">$10.99</p>
+
+<button class="T2b">Customize!</button> 
+
+
+<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 750; top: 580">
+
+<h3 class="MLt">Meat Lovers Pizza</h3>
+
+<p class="MLd">A carnivore's dream! Our handmade crust loaded with our signature red sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, and piled high with savory pepperoni, Italian sausage, Ham, and crispy bacon.
+</p>
+
+<p class="MLp">$14.99</p>
+
+<button class="MLb">Customize!</button>
 
 
 
+<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 880">
+
+<h3 class="HWt">Hawaiian Pizza</h3>
+
+<p class="HWd"> A tropical twist on a classic. Our handmade crust, signature red sauce, and our three-cheese blend, topped with sweet pineapple chunks and savory ham.
+</p>
+
+<p class="HWp">$12.99</p>
+
+<button class="HWb">Customize!</button> 
+
+
+<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 750; top: 880">
+
+<h3 class="BQt">BBQ Chicken Pizza</h3>
+
+<p class="BQd">Tangy and delicious! Our handmade crust topped with BBQ sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, tender BBQ chicken, crispy bacon, and red onions.
+</p>
+
+<p class="BQp">$13.99</p>
+
+<button class="BQb">Customize!</button>
+
+
+
+
+
+<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 1180">
+
+<h3 class="BFt">Buffalo Chicken Pizza</h3>
+
+<p class="BFd"> Spice up your pizza night! Our handmade crust, buffalo sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, spicy buffalo chicken and crispy bacon.
+</p>
+
+<p class="BFp">$13.99</p>
+
+<button class="BFb">Customize!</button> 
+
+
+<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 750; top: 1180">
+
+<h3 class="VGt">Veggie Pizza</h3>
+
+<p class="VGd">A garden-fresh delight! Our handmade crust, signature red sauce, and our three-cheese blend, loaded with fresh mushrooms, crisp green peppers, and sweet onions.
+</p>
+
+<p class="VGp">$11.99</p>
+
+<button class="VGb">Customize!</button>
+
+
+<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 1480">
+
+<h3 class="DXt">Deluxe Pizza</h3>
+
+<p class="DXd"> The ultimate combination. Our handmade crust, signature red sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, topped with pepperoni, Italian sausage, and mushrooms.
+
+</p>
+
+<p class="DXp">$14.99</p>
+
+<button class="DXb">Customize!</button>
+
+
+<hr class="bottom">
+<hr class="rounded">
+<p style="text-align: center;
+font-size: 16px; font-weight: bold;">Contact: +1(987)-6543            PizzaWebsite@gmail.com</p>
 </body>
 
 </html>
