--- a/Web Page Code/PizzaCart.html
+++ b/Web Page Code/PizzaCart.html
@@ -3,7 +3,7 @@
 
 <head>
 <!--Change title to something relevent to the page-->
-<title>Customize-pizzawebsite.com</title>
+<title>MyShoppingCart-pizzawebsite.com</title>
 <meta name="description" content="Pizza customization page of www.pizzacompany.com">
 
 <!--Change href below to proper css-->
@@ -22,13 +22,16 @@
      </ul>
 </nav>
 
-<h1 class="titleText">Title </h1>
+<h1 class="titleText">My Shopping Cart</h1>
 
 <hr class="rounded">
 <!--insert all page content here-->
 
+<p class="txt"> Uh oh, looks like somebody forgot the pizza!</p>
 
-
+<a href="PizzaMenu.html">
+<button class="rtm" target="PizzaMenu.html">Return to Menu</button>
+</a>
 
 
 
