--- a/Web Page Code/PizzaCoupons.html
+++ b/Web Page Code/PizzaCoupons.html
@@ -3,11 +3,12 @@
 
 <head>
 <!--Change title to something relevent to the page-->
-<title>Customize-pizzawebsite.com</title>
+<title>Coupons-pizzawebsite.com</title>
 <meta name="description" content="Pizza customization page of www.pizzacompany.com">
 
+
 <!--Change href below to proper css-->
-<link rel="stylesheet" href="cart.css">
+<link rel="stylesheet" href="coupons.css">
 
 </header>
 
@@ -22,14 +23,31 @@
      </ul>
 </nav>
 
-<h1 class="titleText">Title </h1>
+<h1 class="titleText">Coupons and Promotions</h1>
 
 <hr class="rounded">
 <!--insert all page content here-->
 
+<h1 class="T1">Buy One Get One <strong>Free</strong>!</h1>
+<p class="P1">Buy one pizza get a second pizza <strong>FREE</strong>! (applies to cheaper pizza)</p>
+
+<button class="B1">Add to Order!</button>
+
+<h1 class="T2">Loaded Pie Special</h1>
+<p class="P2">Get a custom pizza with 5 toppings for the<strong> price of a pizza with 3 toppings</strong>!</p>
+
+<button class="B2">Add to Order!</button>
+
+<div class="rect1t"></div>
+<div class="rect1b"></div>
+<div class="rect1l"></div>
+<div class="rect1r"></div>
 
 
-
+<div class="rect2t"></div>
+<div class="rect2b"></div>
+<div class="rect2l"></div>
+<div class="rect2r"></div>
 
 
 
