--- a/Web Page Code/PizzaCustomize.html
+++ b/Web Page Code/PizzaCustomize.html
@@ -14,10 +14,9 @@
 <nav class="nbar">
 	<ul>
 		 <li><a href="homepage.html">Home</a></li>
-         <li><a href="">Menu</a></li>
-         <li><a href="">Coupons</a></li>
-         <li><a href="">Cart</a></li>
-         <li><a href="">Contact</a></li>
+         <li><a href="PizzaMenu.html">Menu</a></li>
+         <li><a href="PizzaCoupons.html">Coupons</a></li>
+         <li><a href="PizzaCart.html">Cart</a></li>
      </ul>
 </nav>
 
