--- a/Web Page Code/homepage.html
+++ b/Web Page Code/homepage.html
@@ -7,16 +7,16 @@
 
 </head>
 <body>
-    <h1>Pizza Website</h1>
     <nav class="navbar">
         <ul>
             <li><a href="homepage.html">Home</a></li>
-            <li><a href="">Menu</a></li>
+            <li><a href="C:\Users\seraj\OneDrive\Documents\GitHub\CS491\Web Page Code\PizzaMenu.html">Menu</a></li>
             <li><a href="">Coupons</a></li>
             <li><a href="">Cart</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
+    <h1>Pizza Website</h1>
     <main>
         <h3>This is the home page</h3>
         <p>Pizza pizza pizza</p>
