--- a/Web Page Code/homepage.html
+++ b/Web Page Code/homepage.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Pizza</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -10,18 +10,25 @@
     <nav class="navbar">
         <ul>
             <li><a href="homepage.html">Home</a></li>
-            <li><a href="C:\Users\seraj\OneDrive\Documents\GitHub\CS491\Web Page Code\PizzaMenu.html">Menu</a></li>
-            <li><a href="">Coupons</a></li>
-            <li><a href="">Cart</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="PizzaMenu.html">Menu</a></li>
+            <li><a href="PizzaCoupons.html">Coupons</a></li>
+            <li><a href="PizzaCart.html">Cart</a></li>
         </ul>
     </nav>
-    <h1>Pizza Website</h1>
+
+    <h1 class="titleText">Pizza</h1>
+    <hr class="rounded">
     <main>
-        <h3>This is the home page</h3>
-        <p>Pizza pizza pizza</p>
+        <h3>The best pizza around!</h3>
+        <p>Always fresh, always done to perfection</p>
     </main>
-    <img src="C:\Users\seraj\OneDrive\Documents\GitHub\CS491\pizzahomepage1.jpg" alt="Pizza image" class="pizza">
+    <img src="C:\Users\seraj\OneDrive\Documents\GitHub\CS491\website banner.jpg" alt="Pizza image" class="pizza">
+
+    <hr class="bottom">
+<p style="text-align: center;
+font-size: 16px; font-weight: bold;">Contact: +1(987)-6543            PizzaWebsite@gmail.com</p>
+</body>
+</html>
 </body>
 
 </html>
