--- a/Web Page Code/PizzaMenu.html
+++ b/Web Page Code/PizzaMenu.html
@@ -4,7 +4,7 @@
 <head>
 <title>Menu-pizzawebsite.com</title>
 <meta name="description" content="Menu webpage of www.pizzacompany.com">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="menu.css">
 
 </header>
@@ -27,122 +27,89 @@
 
 <hr class="dashed">
 
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 280">
-
-<h3 class="CPt">Cheese Pizza</h3>
-
-<p class="CPd"> A classic blend of melted Asiago, Mozzarella, and Cheddar cheeses, baked to golden perfection on our handmade crust with our signature red sauce. Simple, satisfying, and utterly delicious.
-</p>
-
-<p class="CPp">$8.99</p>
-
-<button class="CPb">Customize!</button> 
+<div class="container">
 
 
+	<img src="Webpage Photos/cheesePizza.jpg" class="photo" style="grid-column: 1/1; grid-row: 1/1">
+	<img src="Webpage Photos/1toppingPizza.jpg" class="photo" style="grid-column: 3/3; grid-row: 1/1">
+	<img src="Webpage Photos/2toppingPizza.jpg" class="photo" style="grid-column: 1/1; grid-row: 2/2">
+	<img src="Webpage Photos/meatLoversPizza.jpg" class="photo" style="grid-column: 3/3; grid-row: 2/2">
+	<img src="Webpage Photos/hawiianPizza.jpg" class="photo" style="grid-column: 1/1; grid-row: 3/3">
+	<img src="Webpage Photos/bbqChickenPizza.jpg" class="photo" style="grid-column: 3/3; grid-row: 3/3">
+	<img src="Webpage Photos/buffaloChickenPizza.jpg" class="photo" style="grid-column: 1/1; grid-row: 4/4">
+	<img src="Webpage Photos/veggiePizza.jpg" class="photo" style="grid-column: 3/3; grid-row: 4/4">
+	<img src="Webpage Photos/deluxePizza.jpg" class="photo" style="grid-column: 1/1; grid-row: 5/5">
 
 
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 750; top: 280">
+	<div class="item-a" style="font-size: 40px; align-self: start; color: #FFB703"> Cheese Pizza </div>
+	<div class="item-a" style="margin-top: 50px"> A classic blend of melted Asiago, Mozzarella, and Cheddar cheeses, baked to golden perfection on our handmade crust with our signature red sauce. Simple, satisfying, and utterly delicious.</div>
+	
+<!-- CUSTOMIZE BUTTON FOR CHEESE PIZZA-->
+	<button class="customize" style="grid-column: 2/2; grid-row: 1/1;">Customize</button>
 
-<h3 class="T1t">1-Topping Pizza</h3>
+	<div class="item-a" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$8.99</div>
 
-<p class="T1d">Our handmade crust, topped with our signature red sauce and a generous layer of our three-cheese blend. Choose your favorite topping to create your perfect pizza!
-</p>
+	<div class="item-b" style="font-size: 40px; align-self: start; color: #FFB703"> 1-Topping Pizza </div>
+	<div class="item-b" style="margin-top: 50px"> Our handmade crust, topped with our signature red sauce and a generous layer of our three-cheese blend. Choose your favorite topping to create your perfect pizza!</div>
+	
+<!-- CUSTOMIZE BUTTON FOR 1 TOPPING PIZZA-->
+	<button class="customize" style="grid-column: 4/4; grid-row: 1/1; ">Customize</button>
+	<div class="item-b" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$9.99</div>
 
-<p class="T1p">$9.99</p>
+	<div class="item-c" style="font-size: 40px; align-self: start; color: #FFB703"> 2-Topping Pizza </div>
+	<div class="item-c" style="margin-top: 50px"> Customize your culinary experience with our two-topping pizza. Starting with our handmade crust, signature red sauce, and a blend of Asiago, Mozzarella, and Cheddar cheeses, add your favorite duo of toppings.</div>
+	
+<!-- CUSTOMIZE BUTTON FOR 2 TOPPING PIZZA-->
+	<button class="customize" style="grid-column: 2/2; grid-row: 2/2; ">Customize</button>
+	<div class="item-c" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$10.99</div>
 
-<button class="T1b">Customize!</button>
+	<div class="item-d" style="font-size: 40px; align-self: start; color: #FFB703"> Meat Lovers Pizza </div>
+	<div class="item-d" style="margin-top: 50px"> A carnivore's dream! Our handmade crust loaded with our signature red sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, and piled high with savory pepperoni, Italian sausage, Ham, and crispy bacon.</div>
+	
+<!-- CUSTOMIZE BUTTON FOR MEAT LOVERS PIZZA-->
+	<button class="customize" style="grid-column: 4/4; grid-row: 2/2; ">Customize</button>
+	<div class="item-d" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$14.99</div>
 
+	<div class="item-e" style="font-size: 40px; align-self: start; color: #FFB703"> Hawiian Pizza </div>
+	<div class="item-e" style="margin-top: 50px"> A tropical twist on a classic. Our handmade crust, signature red sauce, and our three-cheese blend, topped with sweet pineapple chunks and savory ham.</div>
+	
+<!-- CUSTOMIZE BUTTON FOR HAWIIAN PIZZA-->
+	<button class="customize" style="grid-column: 2/2; grid-row: 3/3; ">Customize</button>
+	<div class="item-e" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$12.99</div>
 
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 580">
+	<div class="item-f" style="font-size: 40px; align-self: start; color: #FFB703"> BBQ Chicken Pizza </div>
+	<div class="item-f" style="margin-top: 50px"> Tangy and delicious! Our handmade crust topped with BBQ sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, tender BBQ chicken, crispy bacon, and red onions.</div>
+	
+<!-- CUSTOMIZE BUTTON FOR BBQ CHICKEN PIZZA-->
+	<button class="customize" style="grid-column: 4/4; grid-row: 3/3; ">Customize</button>
+	<div class="item-f" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$13.99</div>
 
-<h3 class="T2t">2-Topping Pizza</h3>
+	<div class="item-g" style="font-size: 40px; align-self: start; color: #FFB703"> Buffalo Chicken Pizza </div>
+	<div class="item-g" style="margin-top: 50px"> Spice up your pizza night! Our handmade crust, buffalo sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, spicy buffalo chicken and crispy bacon.</div>
+	
+<!-- CUSTOMIZE BUTTON FOR BUFFALO CHICKEN PIZZA-->
+	<button class="customize" style="grid-column: 2/2; grid-row: 4/4; ">Customize</button>
+	<div class="item-g" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$13.99</div>
 
-<p class="T2d"> Customize your culinary experience with our two-topping pizza. Starting with our handmade crust, signature red sauce, and a blend of Asiago, Mozzarella, and Cheddar cheeses, add your favorite duo of toppings.
-</p>
+	<div class="item-h" style="font-size: 40px; align-self: start; color: #FFB703"> Veggie Pizza </div>
+	<div class="item-h" style="margin-top: 50px"> A garden-fresh delight! Our handmade crust, signature red sauce, and our three-cheese blend, loaded with fresh mushrooms, crisp green peppers, and sweet onions.</div>
+	
+<!-- CUSTOMIZE BUTTON FOR VEGGIE PIZZA-->
+	<button class="customize" style="grid-column: 4/4; grid-row: 4/4; ">Customize</button>
+	<div class="item-h" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$11.99</div>
 
-<p class="T2p">$10.99</p>
+	<div class="item-i" style="font-size: 40px; align-self: start; color: #FFB703"> Deluxe Pizza </div>
+	<div class="item-i" style="margin-top: 50px"> The ultimate combination. Our handmade crust, signature red sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, topped with pepperoni, Italian sausage, green peppers, sweet onions, and mushrooms.</div>
 
-<button class="T2b">Customize!</button> 
-
-
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 750; top: 580">
-
-<h3 class="MLt">Meat Lovers Pizza</h3>
-
-<p class="MLd">A carnivore's dream! Our handmade crust loaded with our signature red sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, and piled high with savory pepperoni, Italian sausage, Ham, and crispy bacon.
-</p>
-
-<p class="MLp">$14.99</p>
-
-<button class="MLb">Customize!</button>
-
-
-
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 880">
-
-<h3 class="HWt">Hawaiian Pizza</h3>
-
-<p class="HWd"> A tropical twist on a classic. Our handmade crust, signature red sauce, and our three-cheese blend, topped with sweet pineapple chunks and savory ham.
-</p>
-
-<p class="HWp">$12.99</p>
-
-<button class="HWb">Customize!</button> 
-
-
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 750; top: 880">
-
-<h3 class="BQt">BBQ Chicken Pizza</h3>
-
-<p class="BQd">Tangy and delicious! Our handmade crust topped with BBQ sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, tender BBQ chicken, crispy bacon, and red onions.
-</p>
-
-<p class="BQp">$13.99</p>
-
-<button class="BQb">Customize!</button>
-
-
-
-
-
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 1180">
-
-<h3 class="BFt">Buffalo Chicken Pizza</h3>
-
-<p class="BFd"> Spice up your pizza night! Our handmade crust, buffalo sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, spicy buffalo chicken and crispy bacon.
-</p>
-
-<p class="BFp">$13.99</p>
-
-<button class="BFb">Customize!</button> 
+<!-- CUSTOMIZE BUTTON FOR DELUXE PIZZA-->
+	<button action="" class="customize" style="grid-column: 2/2; grid-row: 5/5; ">Customize</button>
+	<div class="item-i" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$14.99</div>
 
 
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 750; top: 1180">
-
-<h3 class="VGt">Veggie Pizza</h3>
-
-<p class="VGd">A garden-fresh delight! Our handmade crust, signature red sauce, and our three-cheese blend, loaded with fresh mushrooms, crisp green peppers, and sweet onions.
-</p>
-
-<p class="VGp">$11.99</p>
-
-<button class="VGb">Customize!</button>
 
 
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="200" length="200" style="position: absolute; left: 10; top: 1480">
+</div>
 
-<h3 class="DXt">Deluxe Pizza</h3>
-
-<p class="DXd"> The ultimate combination. Our handmade crust, signature red sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, topped with pepperoni, Italian sausage, and mushrooms.
-
-</p>
-
-<p class="DXp">$14.99</p>
-
-<button class="DXb">Customize!</button>
-
-
-<hr class="bottom">
 <hr class="rounded">
 <p style="text-align: center;
 font-size: 16px; font-weight: bold;">Contact: +1(987)-6543            PizzaWebsite@gmail.com</p>
