--- a/Web Page Code/PizzaCustomize.html
+++ b/Web Page Code/PizzaCustomize.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>Customize-pizzawebsite.com</title>
-<meta name="description" content="Pizza customization page of www.pizzacompany.com">
+<meta name="description" content="Pizza customization webpage of www.pizzacompany.com">
 
 <link rel="stylesheet" href="customize.css">
 
@@ -19,94 +19,109 @@
          <li><a href="PizzaCart.html">Cart</a></li>
      </ul>
 </nav>
-
-<h1 class="titleText">Customize Your Pizza!</h1>
+<h1 class="TTL">CUSTOMIZE</h1>
 
 <hr class="rounded">
 
-<p class="hT1">Preview Pizza</p>
+<!--action=(ENTER URL THAT PROCESSES FORM SUBMISSION)-->
+<form action="" method="GET">
 
-<img src="C:\Users\necka\OneDrive\PizzaProject\Project Resources\Images\square placeholder.png" width="500" length="500" style="position: absolute; left: 10; top: 280">
 
-<p class="hT2">Customize</p>
+<div class="container">
 
-<p class="sT1">Select Size</p>
+<div style="margin-top: -10px; margin-bottom: -20px; background-color: #023047; grid-column: 1/1; grid-row: 1/6">
+</div>
 
-<p class="sT2">Select Sauce</p>
-
-<p class="sT3">Select Toppings</p>
-
-<p class="sT4">Select Cheese</p>
-
-<form action="">
-<fieldset style="border:none" id="pizzaSize">
-  <input style="color: #023047; position:absolute; top:350; left:700;" type="radio" id="size1" name="pizzaSize" value="Small">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:350; left:720; "for="size1">Small 12"</label><br>
-  <input style="color: #023047; position:absolute; top:380; left:700;" type="radio" id="size2" name="pizzaSize" value="Medium">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:380; left:720; "for="size2">Medium 16"</label><br>
-  <input style="color: #023047; position:absolute; top:410; left:700;" type="radio" id="size3" name="pizzaSize" value="Large">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:410; left:720; "for="size3">Large 22"</label><br><br>
-</fieldset>
-
-<fieldset style="border:none" id="pizzaSauce">
-  <input style="color: #023047; position:absolute; top:520; left:700;" type="radio" id="sauce1" name="pizzaSauce" value="Red">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:520; left:720; "for="sauce1">Red Sauce</label><br>
-  <input style="color: #023047; position:absolute; top:550; left:700;" type="radio" id="sauce2" name="pizzaSauce" value="BBQ">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:550; left:720; "for="sauce2">BBQ Sauce</label><br>
-  <input style="color: #023047; position:absolute; top:580; left:700;" type="radio" id="sauce3" name="pizzaSauce" value="Buffalo">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:580; left:720; "for="sauce3">Buffalo Sauce</label><br><br>
-</fieldset>
-
-<fieldset style="border:none" id="pizzaCheese">
-  <input style="color: #023047; position:absolute; top:690; left:700;" type="radio" id="cheese1" name="pizzaCheese" value="NoCheese">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:690; left:720; "for="cheese1">No Cheese</label><br>
-  <input style="color: #023047; position:absolute; top:720; left:700;" type="radio" id="cheese2" name="pizzaCheese" value="Normal">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:720; left:720; "for="cheese2">Normal Cheese</label><br>
-  <input style="color: #023047; position:absolute; top:750; left:700;" type="radio" id="cheese3" name="pizzaCheese" value="Heavy">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:750; left:720; "for="cheese3">Heavy Cheese</label><br><br>
-</fieldset>
+<div style="margin-top: -10px; margin-bottom: -20px; background-color: #023047; grid-column: 4/4; grid-row: 1/6">
+</div>
 
 
 
-<fieldset style="border:none" id="pizzaTop">
-  <input style="color: #023047; position:absolute; top:350; left:1050;" type="checkbox" id="top1" name="pizzaTop" value="Pepperoni">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:350; left:1070; "for="top1">Pepperoni</label><br>
-  <input style="color: #023047; position:absolute; top:380; left:1050;" type="checkbox" id="top2" name="pizzaTop" value="Sausage">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:380; left:1070; "for="top2">Sausage</label><br>
-  <input style="color: #023047; position:absolute; top:410; left:1050;" type="checkbox" id="top3" name="pizzaTop" value="Bacon">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:410; left:1070; "for="top3">Bacon</label><br>
-  <input style="color: #023047; position:absolute; top:440; left:1050;" type="checkbox" id="top4" name="pizzaTop" value="Pepperoni">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:440; left:1070; "for="top4">Chicken</label><br>
-  <input style="color: #023047; position:absolute; top:470; left:1050;" type="checkbox" id="top5" name="pizzaTop" value="Sausage">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:470; left:1070; "for="top5">Ham</label><br>
-  <input style="color: #023047; position:absolute; top:500; left:1050;" type="checkbox" id="top6" name="pizzaTop" value="Pineapple">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:500; left:1070; "for="top6">Pineapple</label><br>
+<div style="grid-column: 2/2; grid-row: 2/2">
+	<fieldset style="border:none;" id="pizzaSize">
+		<h2 class="hT">Select Size:</h2>
+		<input style="color: #023047;" type="radio" id="size1" name="pizzaSize" value="Small">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="size1">Small 12"</label><br>
+    	<input style="color: #023047;" type="radio" id="size2" name="pizzaSize" value="Medium">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px; "for="size2">Medium 16"</label><br>
+    	<input style="color: #023047;" type="radio" id="size3" name="pizzaSize" value="Large">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px; "for="size3">Large 22"</label><br><br>
+	</fieldset>
+</div>
+
+<div style="grid-column: 2/2; grid-row: 3/3">
+	<fieldset style="border:none;" id="pizzaSauce">
+		<h2 class="hT">Select Sauce:</h2>
+		<input style="color: #023047;" type="radio" id="sauce1" name="pizzaSauce" value="Red">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="sauce1">Red Sauce</label><br>
+    	<input style="color: #023047;" type="radio" id="sauce2" name="pizzaSauce" value="BBQ">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px; "for="sauce2">BBQ Sauce"</label><br>
+    	<input style="color: #023047;" type="radio" id="sauce3" name="pizzaSauce" value="Buffalo">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px; "for="sauce3">Buffalo Sauce</label><br><br>
+	</fieldset>
+</div>
+
+<div style="grid-column: 2/2; grid-row: 4/4">
+	<fieldset style="border:none;" id="pizzaCheese">
+		<h2 class="hT">Select Cheese:</h2>
+		<input style="color: #023047;" type="radio" id="cheese1" name="pizzaCheese" value="NoCheese">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="cheese1">NoCheese</label><br>
+    	<input style="color: #023047;" type="radio" id="cheese2" name="pizzaCheese" value="Normal">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px; "for="cheese2">Normal Cheese"</label><br>
+    	<input style="color: #023047;" type="radio" id="cheese3" name="pizzaCheese" value="Heavy">
+    	<label style="color: #023047; font-family: sans-serif; font-size: 18px; "for="cheese3">Extra Cheese</label><br><br>
+	</fieldset>
+</div>
+
+<div style="grid-column: 3/3; grid-row:2/4">
+	<fieldset style="border:none" id="pizzaTop">
+		<h2 class="hT">Select Toppings:</h2>
+	  	<input style="color: #023047;" type="checkbox" id="top1" name="pizzaTop" value="Pepperoni">
+	  	<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top1">Pepperoni</label><br>
+	  	<input style="color: #023047;" type="checkbox" id="top2" name="pizzaTop" value="Sausage">
+	  	<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top2">Sausage</label><br>
+	  	<input style="color: #023047;" type="checkbox" id="top3" name="pizzaTop" value="Bacon">
+		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top3">Bacon</label><br>
+		<input style="color: #023047;" type="checkbox" id="top4" name="pizzaTop" value="Pepperoni">
+		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top4">Chicken</label><br>
+		<input style="color: #023047;" type="checkbox" id="top5" name="pizzaTop" value="Sausage">
+		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top5">Ham</label><br>
+		<input style="color: #023047;" type="checkbox" id="top6" name="pizzaTop" value="Pineapple">
+		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top6">Pineapple</label><br>
+		<input style="color: #023047;" type="checkbox" id="top7" name="pizzaTop" value="GreenPepper">
+		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top7">Green Peppers</label><br>
+		<input style="color: #023047;" type="checkbox" id="top8" name="pizzaTop" value="Mushroom">
+		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top8">Mushroom</label><br>
+		<input style="color: #023047;" type="checkbox" id="top9" name="pizzaTop" value="RedOnion">
+		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top9">Red Onion</label><br>
+		<input style="color: #023047;" type="checkbox" id="top10" name="pizzaTop" value="SweetOnion">
+		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="top10">Sweet Onion</label><br><br>
+	</fieldset>
+</div>
+
+<div style="grid-column: 3/3; grid-row:4/4">
+	<fieldset style="border:none" id="specialRequests">
+  		<label style="color: #023047; font-family: sans-serif; font-size: 18px;"for="specialRequests">Special Requests:</label><br>
+  		<input style="color: #023047; font-family: sans-serif; font-size: 18px;" type="text" id="specialRequests" name="specialRequests" value=""><br>
+	</fieldset>
+</div>
 
 
+	
+<!--Cant seem to link submit button to cart, reddit states it can be done using JS or backend-->
+<div  style="grid-column: 3/3; grid-row:5/5">
+	<input style="height:90; width:200; background-color: #FB8500; border-radius: 20px" type="submit" value="Add To Cart">
+</div>
 
-  <input style="color: #023047; position:absolute; top:530; left:1050;" type="checkbox" id="top7" name="pizzaTop" value="GreenPepper">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:530; left:1070; "for="top7">Green Peppers</label><br>
-  <input style="color: #023047; position:absolute; top:560; left:1050;" type="checkbox" id="top8" name="pizzaTop" value="Mushroom">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:560; left:1070; "for="top8">Mushroom</label><br>
-  <input style="color: #023047; position:absolute; top:590; left:1050;" type="checkbox" id="top9" name="pizzaTop" value="RedOnion">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:590; left:1070; "for="top9">Red Onion</label><br>
-  <input style="color: #023047; position:absolute; top:620; left:1050;" type="checkbox" id="top10" name="pizzaTop" value="SweetOnion">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:620; left:1070; "for="top10">Sweet Onion</label><br>
-  <input style="color: #023047; position:absolute; top:650; left:1050;" type="checkbox" id="top11" name="pizzaTop" value="ExtraCheese">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:650; left:1070; "for="top11">Extra Cheese</label><br><br>
-</fieldset>
+<!--Ends the "grid"-->
+</div>
 
-<fieldset style="border:none" id="specialRequests">
-  <label style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:700; left:1050; "for="specialRequests">Special Requests:</label><br>
-  <input style="color: #023047; font-family: sans-serif; font-size: 18px; position:absolute; top:720; left:1050;" type="text" id="specialRequests" name="specialRequests" value=""><br>
-</fieldset>
+</form>
 
-
-  <input style="height:90; width:200; background-color: #FB8500; position:absolute; top: 800; left: 750; border-radius: 20px" type="submit" value="Submit">
-</form> 
-
-<hr class="bottom">
+<hr class="rounded">
 <p style="text-align: center;
 font-size: 16px; font-weight: bold;">Contact: +1(987)-6543            PizzaWebsite@gmail.com</p>
+
 </body>
+
 </html>
