--- a/Web Page Code/PizzaMenu.html
+++ b/Web Page Code/PizzaMenu.html
@@ -4,7 +4,7 @@
 <head>
 <title>Menu-pizzawebsite.com</title>
 <meta name="description" content="Menu webpage of www.pizzacompany.com">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" href="menu.css">
 
 </header>
@@ -45,7 +45,7 @@
 	<div class="item-a" style="margin-top: 50px"> A classic blend of melted Asiago, Mozzarella, and Cheddar cheeses, baked to golden perfection on our handmade crust with our signature red sauce. Simple, satisfying, and utterly delicious.</div>
 	
 <!-- CUSTOMIZE BUTTON FOR CHEESE PIZZA-->
-	<button class="customize" style="grid-column: 2/2; grid-row: 1/1;">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 2/2; grid-row: 1/1;">Customize</button>
 
 	<div class="item-a" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$8.99</div>
 
@@ -53,56 +53,56 @@
 	<div class="item-b" style="margin-top: 50px"> Our handmade crust, topped with our signature red sauce and a generous layer of our three-cheese blend. Choose your favorite topping to create your perfect pizza!</div>
 	
 <!-- CUSTOMIZE BUTTON FOR 1 TOPPING PIZZA-->
-	<button class="customize" style="grid-column: 4/4; grid-row: 1/1; ">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 4/4; grid-row: 1/1; ">Customize</button>
 	<div class="item-b" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$9.99</div>
 
 	<div class="item-c" style="font-size: 40px; align-self: start; color: #FFB703"> 2-Topping Pizza </div>
 	<div class="item-c" style="margin-top: 50px"> Customize your culinary experience with our two-topping pizza. Starting with our handmade crust, signature red sauce, and a blend of Asiago, Mozzarella, and Cheddar cheeses, add your favorite duo of toppings.</div>
 	
 <!-- CUSTOMIZE BUTTON FOR 2 TOPPING PIZZA-->
-	<button class="customize" style="grid-column: 2/2; grid-row: 2/2; ">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 2/2; grid-row: 2/2; ">Customize</button>
 	<div class="item-c" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$10.99</div>
 
 	<div class="item-d" style="font-size: 40px; align-self: start; color: #FFB703"> Meat Lovers Pizza </div>
 	<div class="item-d" style="margin-top: 50px"> A carnivore's dream! Our handmade crust loaded with our signature red sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, and piled high with savory pepperoni, Italian sausage, Ham, and crispy bacon.</div>
 	
 <!-- CUSTOMIZE BUTTON FOR MEAT LOVERS PIZZA-->
-	<button class="customize" style="grid-column: 4/4; grid-row: 2/2; ">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 4/4; grid-row: 2/2; ">Customize</button>
 	<div class="item-d" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$14.99</div>
 
 	<div class="item-e" style="font-size: 40px; align-self: start; color: #FFB703"> Hawiian Pizza </div>
 	<div class="item-e" style="margin-top: 50px"> A tropical twist on a classic. Our handmade crust, signature red sauce, and our three-cheese blend, topped with sweet pineapple chunks and savory ham.</div>
 	
 <!-- CUSTOMIZE BUTTON FOR HAWIIAN PIZZA-->
-	<button class="customize" style="grid-column: 2/2; grid-row: 3/3; ">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 2/2; grid-row: 3/3; ">Customize</button>
 	<div class="item-e" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$12.99</div>
 
 	<div class="item-f" style="font-size: 40px; align-self: start; color: #FFB703"> BBQ Chicken Pizza </div>
 	<div class="item-f" style="margin-top: 50px"> Tangy and delicious! Our handmade crust topped with BBQ sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, tender BBQ chicken, crispy bacon, and red onions.</div>
 	
 <!-- CUSTOMIZE BUTTON FOR BBQ CHICKEN PIZZA-->
-	<button class="customize" style="grid-column: 4/4; grid-row: 3/3; ">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 4/4; grid-row: 3/3; ">Customize</button>
 	<div class="item-f" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$13.99</div>
 
 	<div class="item-g" style="font-size: 40px; align-self: start; color: #FFB703"> Buffalo Chicken Pizza </div>
 	<div class="item-g" style="margin-top: 50px"> Spice up your pizza night! Our handmade crust, buffalo sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, spicy buffalo chicken and crispy bacon.</div>
 	
 <!-- CUSTOMIZE BUTTON FOR BUFFALO CHICKEN PIZZA-->
-	<button class="customize" style="grid-column: 2/2; grid-row: 4/4; ">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 2/2; grid-row: 4/4; ">Customize</button>
 	<div class="item-g" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$13.99</div>
 
 	<div class="item-h" style="font-size: 40px; align-self: start; color: #FFB703"> Veggie Pizza </div>
 	<div class="item-h" style="margin-top: 50px"> A garden-fresh delight! Our handmade crust, signature red sauce, and our three-cheese blend, loaded with fresh mushrooms, crisp green peppers, and sweet onions.</div>
 	
 <!-- CUSTOMIZE BUTTON FOR VEGGIE PIZZA-->
-	<button class="customize" style="grid-column: 4/4; grid-row: 4/4; ">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 4/4; grid-row: 4/4; ">Customize</button>
 	<div class="item-h" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$11.99</div>
 
 	<div class="item-i" style="font-size: 40px; align-self: start; color: #FFB703"> Deluxe Pizza </div>
 	<div class="item-i" style="margin-top: 50px"> The ultimate combination. Our handmade crust, signature red sauce, a blend of Asiago, Mozzarella, and Cheddar cheeses, topped with pepperoni, Italian sausage, green peppers, sweet onions, and mushrooms.</div>
 
 <!-- CUSTOMIZE BUTTON FOR DELUXE PIZZA-->
-	<button action="" class="customize" style="grid-column: 2/2; grid-row: 5/5; ">Customize</button>
+	<button onclick="location.href='PizzaCustomize.html'" class="customize" style="grid-column: 2/2; grid-row: 5/5; ">Customize</button>
 	<div class="item-i" style="margin-top: 140px; width:200px; height:70px; margin-left:400; align-self: end; font-size: 24px;">$14.99</div>
 
 
